--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: firstFont;
+  src: url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+}
